cmake_minimum_required(VERSION 3.5)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

add_subdirectory(third/freetype)

set(ASSIMP_BUILD_TESTS OFF)
set(ASSIMP_INSTALL OFF)
set(ASSIMP_WARNINGS_AS_ERRORS OFF)
set(ASSIMP_INSTALL_PDB OFF)
set(BUILD_SHARED_LIBS ON)
add_subdirectory(third/assimp)

set(BUILD_CPU_DEMOS OFF)
set(BUILD_OPENGL3_DEMOS OFF)
set(BUILD_BULLET2_DEMOS OFF)
set(BUILD_EXTRAS OFF)
set(BUILD_UNIT_TESTS OFF)
# set(USE_GRAPHICAL_BENCHMARK OFF)
# set(USE_SOFT_BODY_MULTI_BODY_DYNAMICS_WORLD OFF)
# set(BUILD_CLSOCKET OFF)
# set(BUILD_ENET OFF)
# set(ENABLE_VHACD OFF)
set(USE_MSVC_RUNTIME_LIBRARY_DLL ON)
set(BUILD_SHARED_LIBS OFF)
add_subdirectory(third/bullet3)

add_subdirectory(src)
